--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<dx-button id="perro"
-    text="holas">
-</dx-button>
-<button>hola2</button>
+<cne-button 
+    [idButton]="2" [typeButton]="'primary'"
+     >
+</cne-button >
+<cne-button 
+    [idButton]="2" [typeButton]="'secondary'"
+     >
+</cne-button >
