--- a/projects/cne-material/src/lib/cne-button/components/cne-button/cne-button.component.html
+++ b/projects/cne-material/src/lib/cne-button/components/cne-button/cne-button.component.html
@@ -1,4 +1,4 @@
 <dx-button
-    [text]="getText" [ngClass]="classes" [icon]="getIcon"
+    text="getText" [ngClass]="classes" 
     (onClick)="onClick($event)" >
 </dx-button>
