--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
 <cne-button 
-    [idButton]="2" [typeButton]="'primary'"
-     >
-</cne-button >
-<cne-button 
-    [idButton]="2" [typeButton]="'secondary'" 
+    [idButton]="2" 
      >
 </cne-button >
